# xjp-router

./: .gitignore  BILLING_IMPLEMENTATION_SUMMARY.md  C3_DEPLOYMENT_GUIDE.md  Cargo.toml  DEVELOPMENT_STATUS.md  Dockerfile  EXECUTION_SUMMARY.md  IMPLEMENTATION_PLAN.md  PHASE2_COMPLETION_SUMMARY.md  README.md  SECRET_STORE_INTEGRATION.md  c3_auto_test.sh
.github/workflows/: ci.yml
config/: xjp.example.toml
docs/: BILLING_API_USAGE.md  BILLING_SYSTEM_DESIGN.md
migrations/: 005_create_billing_transactions.sql  006_create_tenant_billing_summary.sql  20250101000000_initial_schema.sql
scripts/: init-secrets.sh  migrate-to-secret-store.md
src/: auth.rs  lib.rs  main.rs  metrics.rs  observability.rs  ratelimit.rs  registry.rs  routing.rs  sse.rs
src/api/: anthropic.rs  anthropic_adapter.rs  billing.rs  mod.rs  openai.rs  openai_adapter.rs
src/billing/: calc.rs  interceptor.rs  mod.rs  price.rs  tokens.rs  usage.rs
src/connectors/: clewdr.rs  mod.rs  openrouter.rs  vertex.rs
src/core/: entities.rs
src/db/: billing.rs  keys.rs  mod.rs  usage.rs
src/secret_store/: config.rs  error.rs  health.rs  mod.rs  provider.rs
