[package]
name = "xjp-gateway"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["XiaojinPro"]

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws", "http1", "tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
time = "0.3"
# SSE helper
reqwest-eventsource = "0.5"
eventsource-stream = "0.2"
# config
toml = "0.8"
# database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
sha2 = "0.10"
rand = "0.8"
# rate limiting
governor = "0.7"
dashmap = "6.0"
# metrics
prometheus = "0.13"
lazy_static = "1.4"

async-trait = "0.1"
# secret store SDK
secret-store-sdk = "0.1.2"
secrecy = { version = "0.8", features = ["serde"] }
# CLI tool
clap = { version = "4", features = ["derive", "env"] }
